# quant-research-platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpp_strategy_runner.cpp  minimal_pybind11_embed.cpp  requirements.txt
.github/: copilot-instructions.md
data/: alternatives_universe.csv  equity_universe.csv  fixed_income_universe.csv
docs/: portfolio_architecture.md  system_architecture.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/pages/: 1_Dashboard.py
frontend/public/: experiment_20260220.json  experiment_asset_classes.json  experiment_equal_weight.json  experiment_etf_universe.json  experiment_etf_universe_mv_only.json  experiment_full_suite.json  experiment_fwp.json  experiment_high_risk.json  experiment_machine_learning.json  experiment_mean_reversion.json  experiment_ml_bl_momentum_monthly_rebal.json  experiment_ml_bl_momentum_weekly_horizon.json  experiment_securities_bl_only_momentum.json  experiment_securities_mean_variance_only.json  experiment_securities_ml_bl_mean_reversion.json  experiment_securities_ml_bl_momentum.json  experiment_securities_ml_bl_momentum_100.json  experiment_securities_ml_bl_momentum_full_universe.json  experiment_securities_ml_only_momentum.json
frontend/src/: App.js  App.tsx
source_ai/: main.py
source_ai/backtesting/: backtesting_engine.py  portfolio.py
source_ai/models/: rebalance_solution.py
source_ai/portfolio/: portfolio_calculations.py  rebalance_problem.py  rebalance_problem_builder.py
src/: controller.py  main.py  strategy_runner.py
src/application/: controller.py  experiment_runner.py
src/backtesting/: backtesting_engine.py
src/config/: experiment_20260220.json  experiment_asset_classes.json  experiment_equal_weight.json  experiment_etf_universe.json  experiment_etf_universe_mv_only.json  experiment_full_suite.json  experiment_fwp.json  experiment_high_risk.json  experiment_machine_learning.json  experiment_mean_reversion.json  experiment_ml_bl_momentum_monthly_rebal.json  experiment_ml_bl_momentum_weekly_horizon.json  experiment_securities_bl_only_momentum.json  experiment_securities_mean_variance_only.json  experiment_securities_ml_bl_mean_reversion.json  experiment_securities_ml_bl_momentum.json  experiment_securities_ml_bl_momentum_full_universe.json  experiment_securities_ml_only_momentum.json  fwp_strategy.json  lookback_windows.py  mv_strategy.json  mvc_strategy.json
(+110 files in other folders)
